<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="recipe_name" type="id" />

</resources>