...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/step_short_descrpition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingEnd="@dimen/steps_description_padding_rightt"
        android:paddingLeft="@dimen/steps_description_padding_left"
        android:paddingRight="@dimen/steps_description_padding_rightt"
...
