...
            <!--android:id="@+id/progressBar"-->
            <!--style="?android:attr/progressBarStyleHorizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoPlayer"
...
